# Doc2Train

./: .gitignore  LICENSE  MANIFEST.in  README.md  api.py  cli.py  config.yaml  data_structurer.py  file_processor.py  main.py  merge_file.py  pyproject.toml  raw_response_data_extractor.py  requirements-full.txt  requirements.txt  sample_env  setup.py  setup.sh  text_splitting.py  uninstall.sh
cli/: __init__.py  args.py  commands.py
config/: __init__.py  manager.py  settings.py
core/: __init__.py  extractor.py  generator.py  llm_client.py  llm_plugin_manager.py  pipeline.py  plugin_setup.py  processor.py
doc2train/: __init__.py  api.py  cli.py  config.py  main.py  web.py
doc2train/cli/: __init__.py  args.py  commands.py
doc2train/config/: __init__.py  settings.py
doc2train/core/: __init__.py  base_writer.py  extractor.py  formatters.py  generator.py  llm_client.py  llm_plugin_manager.py  pipeline.py  plugin_setup.py  writers.py
doc2train/outputs/: base_formatters.py  formatter_plugin_manager.py  formatters.py  writer_plugin_manager.py  writers.py
doc2train/plugins/: __init__.py
doc2train/processors/: __init__.py  base_processor.py  epub_processor.py  image_processor.py  pdf_processor.py  processor_plugin_manager.py  text_processor.py
doc2train/utils/: __init__.py  cache.py  (+9 more)
outputs/: __init__.py  formatter_plugin_manager.py  formatters.py  writer_plugin_manager.py  writers.py
plugins/: __init__.py
processors/: __init__.py  base_processor.py  epub_processor.py  image_processor.py  pdf_processor.py  pdf_utils.py  processor_plugin_manager.py  smart_pdf_analyzer.py  text_processor.py
utils/: __init__.py  cache.py  config.py  config_loader.py  error_handler.py  files.py  plugin_loader.py  process.py  resource_manager.py  validation.py
(+57 files in other folders)
