# Modern Python packaging configuration for Doc2Train v2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2train"
version = "2.0.0"
description = "Convert documents to AI training data at lightning speed"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]
advanced = [
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
doc2train = "doc2train.cli:main"
doc2train-api = "doc2train.api:start_server"
doc2train-web = "doc2train.web:start_ui"

[project.urls]
"Homepage" = "https://github.com/yourusername/doc2train"
"Bug Reports" = "https://github.com/yourusername/doc2train/issues"
"Documentation" = "https://doc2train.readthedocs.io/"
